# cordia-status-plugins

./: .gitignore  Makefile.am  TODO.tasks  autogen.sh  autovapi.sh  configure.ac
data/: clock-plugin.desktop  status-area-applet-battery.desktop
po/: POTFILES.in
src/: status-area-applet-battery.vala  status-area-applet-clock.vala
vapi/: .gitignore  hildon-1.vapi  libhildondesktop-1.vapi
